trunk/Archive2/a2/4b9aedecf57b93/output
main.cpp:16:40: error: template declaration of 'std::tuple<std::TupleElement<0, Tuples>...> std::concepts::detail::slice'
 std::tuple<TupleElement<0, Tuples>...> slice;
                                        ^
main.cpp:17:34: error: 'slice' is not a member of 'std::concepts::detail'
 template <typename... = decltype(detail::slice<>...)
                                  ^
main.cpp:17:34: error: 'slice' is not a member of 'std::concepts::detail'
main.cpp:17:48: error: expected primary-expression before '>' token
 template <typename... = decltype(detail::slice<>...)
                                                ^
main.cpp:17:49: error: expected primary-expression before '...' token
 template <typename... = decltype(detail::slice<>...)
                                                 ^
main.cpp:17:49: error: expected ')' before '...' token
main.cpp:17:34: error: 'slice' is not a member of 'std::concepts::detail'
 template <typename... = decltype(detail::slice<>...)
                                  ^
main.cpp:17:34: error: 'slice' is not a member of 'std::concepts::detail'
main.cpp:17:34: error: 'slice' is not a member of 'std::concepts::detail'
main.cpp:17:34: error: 'slice' is not a member of 'std::concepts::detail'
main.cpp:17:25: error: expected type-specifier before 'decltype'
 template <typename... = decltype(detail::slice<>...)
                         ^
main.cpp:17:11: error: template parameter packs cannot have default arguments
 template <typename... = decltype(detail::slice<>...)
           ^
main.cpp:17:25: error: expected '>' before 'decltype'
 template <typename... = decltype(detail::slice<>...)
                         ^
main.cpp:17:52: error: expected unqualified-id at end of input
 template <typename... = decltype(detail::slice<>...)
                                                    ^
main.cpp:17:52: error: expected '}' at end of input
main.cpp:17:52: error: expected '}' at end of input
main.cpp:17:52: error: expected '}' at end of input
